[gd_scene load_steps=9 format=2]

[ext_resource path="res://Minijuegos/Pesca/Componentes/Pez.gd" type="Script" id=1]
[ext_resource path="res://assets/img/Peces/besugo.png" type="Texture" id=2]
[ext_resource path="res://assets/img/Peces/bonito.png" type="Texture" id=3]
[ext_resource path="res://assets/img/Peces/caballa.png" type="Texture" id=4]
[ext_resource path="res://assets/img/Peces/besugo_rojo.png" type="Texture" id=5]
[ext_resource path="res://assets/img/Peces/mero.png" type="Texture" id=6]
[ext_resource path="res://assets/img/Peces/limon.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 40.0

[node name="Pez" type="RigidBody2D"]
position = Vector2( 1, 0 )
collision_layer = 2
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )
one_way_collision_margin = 2.1

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Besugo" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Besugo_Rojo" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="Bonito" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="Caballa" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="Limon" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )

[node name="Mero" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Pez_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Pez_body_shape_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
